--- a/index.html
+++ b/index.html
@@ -3,45 +3,90 @@
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
 <html lang="en"> 
 
-<head>
- 
-  <meta charset="utf-8">
+    <head>
 
-  <title>Client | Page Title</title>
-  
-  <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
-  <meta name="description" lang="en" content="">
-  
-  <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
-  <meta name="keywords" lang="en" content="">
-  
-  <!-- View-port Basics: http://mzl.la/VYREaP -->
-  <!-- This meta tag is used for mobile device to display the page without any zooming,
-       so how much the device is able to fit on the screen is what's shown initially. 
-       Remove comments from this tag, when you want to apply media queries to the website. -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
-  
-  <!-- To adhear no-cache for Chrome -->
-  <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-store, no-cache" />
-  <meta http-equiv="Expires" content="0" />
+      <meta charset="utf-8">
 
-  <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link rel="shortcut icon" href="favicon.ico" />
+      <title>Client | Page Title</title>
 
-  <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
-  <link rel="stylesheet" media="screen" href="css/style.css" >
+      <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
+      <meta name="description" lang="en" content="">
 
-  <!-- html5shiv aka html5 shim. Supporting HTML5 and CSS for IE browsers less than IE9. -->	
-  <!--[if lt IE 9]>  
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>  
-  <![endif]-->
+      <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
+      <meta name="keywords" lang="en" content="">
 
-</head>
+      <!-- View-port Basics: http://mzl.la/VYREaP -->
+      <!-- This meta tag is used for mobile device to display the page without any zooming,
+           so how much the device is able to fit on the screen is what's shown initially. 
+           Remove comments from this tag, when you want to apply media queries to the website. -->
+      <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 
-<body>
+      <!-- To adhear no-cache for Chrome -->
+      <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-store, no-cache" />
+      <meta http-equiv="Expires" content="0" />
 
-<script src="js/vendors/jquery-1.8.3.min.js"></script>
-<script src="js/script.js"></script>
-</body>
+      <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
+      <link rel="shortcut icon" href="favicon.ico" />
+
+      <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
+        <!-- <link rel="stylesheet" media="screen" href="css/style.css" >-->
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+      <!-- html5shiv aka html5 shim. Supporting HTML5 and CSS for IE browsers less than IE9. -->	
+      <!--[if lt IE 9]>  
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>  
+      <![endif]-->
+
+    </head>
+
+    <body>
+
+        <div class="container">
+            <div class="wrapper">
+                <form>
+                    <ul>
+                        <li>
+                            <label for="fname">first name:</label>
+                            <input type="text" id="fname" name="fname" value="">        
+                        </li>
+                        <li>
+                            <label for="lname">last name:</label>
+                            <input type="text" id="lname" name="lname" value="">
+                        </li>
+                        <li>
+                            Gender:
+                            <input type="radio" id="male" name="gender" value="male">
+                            <label for="male">male</label>
+                            <input type="radio" id="female" name="gender" value="female">
+                            <label for="female">female</label>
+                        </li>
+                        <li>
+                            <label for="address">address:</label>
+                            <textarea id="address" name="address" rows="4" cols="50"></textarea>
+                        </li>
+                        <li>  
+                            <input type="checkbox" id="vehicle1" name="contition" value="terms">
+                            <label for="condition"> <spna>t</spna>erms and conditions</label><br>
+                        </li>
+                        <li>
+                            <ul>
+                                <li>
+                                    <button type="button" onclick="alert('Hello world!')">submit</button>
+                                </li>
+                                <li>
+                                    <button type="button" onclick="alert('Hello world!')">cancel</button>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+        </div>
+        
+        
+        <script src="js/vendors/jquery-1.8.3.min.js"></script>
+        <!-- <script src="js/script.js"></script>-->
+        <script src="assets/js/script.js"></script>
+    </body>
 </html>
