--- a/index.html
+++ b/index.html
@@ -1,92 +1,106 @@
 <!doctype html>
 
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
-<html lang="en"> 
+<html lang="en">
 
-    <head>
+<head>
+  <meta charset="utf-8">
 
-      <meta charset="utf-8">
+  <title>Client | Page Title</title>
 
-      <title>Client | Page Title</title>
+  <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
+  <link rel="shortcut icon" href="favicon.ico" />
 
-      <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
-      <meta name="description" lang="en" content="">
+  <!--font-awesome link for icons-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
+  <link rel="stylesheet" media="screen" href="assets/css/style.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
-      <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
-      <meta name="keywords" lang="en" content="">
+</head>
 
-      <!-- View-port Basics: http://mzl.la/VYREaP -->
-      <!-- This meta tag is used for mobile device to display the page without any zooming,
-           so how much the device is able to fit on the screen is what's shown initially. 
-           Remove comments from this tag, when you want to apply media queries to the website. -->
-      <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+<body>
+  <!--container start-->
+  <div class="container">
+    <!--header section start-->
+    <header>
 
-      <!-- To adhear no-cache for Chrome -->
-      <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
-      <meta http-equiv="Pragma" content="no-store, no-cache" />
-      <meta http-equiv="Expires" content="0" />
-
-      <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-      <link rel="shortcut icon" href="favicon.ico" />
-
-      <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
-        <!-- <link rel="stylesheet" media="screen" href="css/style.css" >-->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-      <!-- html5shiv aka html5 shim. Supporting HTML5 and CSS for IE browsers less than IE9. -->	
-      <!--[if lt IE 9]>  
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>  
-      <![endif]-->
-
-    </head>
-
-    <body>
-
-        <div class="container">
-            <div class="wrapper">
-                <form>
-                    <ul>
-                        <li>
-                            <label for="fname">first name:</label>
-                            <input type="text" id="fname" name="fname" value="">        
-                        </li>
-                        <li>
-                            <label for="lname">last name:</label>
-                            <input type="text" id="lname" name="lname" value="">
-                        </li>
-                        <li>
-                            Gender:
-                            <input type="radio" id="male" name="gender" value="male">
-                            <label for="male">male</label>
-                            <input type="radio" id="female" name="gender" value="female">
-                            <label for="female">female</label>
-                        </li>
-                        <li>
-                            <label for="address">address:</label>
-                            <textarea id="address" name="address" rows="4" cols="50"></textarea>
-                        </li>
-                        <li>  
-                            <input type="checkbox" id="vehicle1" name="contition" value="terms">
-                            <label for="condition"> <spna>t</spna>erms and conditions</label><br>
-                        </li>
-                        <li>
-                            <ul>
-                                <li>
-                                    <button type="button" onclick="alert('Hello world!')">submit</button>
-                                </li>
-                                <li>
-                                    <button type="button" onclick="alert('Hello world!')">cancel</button>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </form>
+    </header>
+    <!--header section start-->
+    <!--main section start-->
+    <main>
+      <!--Form section start-->
+      <div class="form-container">
+        <div class="wrapper">
+          <form class="forms" id="forms">
+            <div class="form-group">
+              <label for="firstName" class="labelName">First Name:</label>
+              <div class="input-box">
+                <input type="text" name="firstname" id="firstName" class="firstName border">
+              </div>
             </div>
+            <div class="form-group">
+              <label for="lastName" class="labelName">Last Name:</label>
+              <div class="input-box">
+                <input type="text" name="lastname" id="lastName" class="lastName border">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="labelName">Gender:</label>
+              <div class="gender-button">
+                <input type="radio" name="gender" id="male" value="Male">
+                <label for="male">Male</label>
+                <input type="radio" name="gender" id="female" value="Female">
+                <label for="female">Female</label>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="address" class="labelName">Address:</label>
+              <div class="input-box">
+                <textarea name="address" id="address" class="address border"></textarea>
+              </div>
+            </div>
+            <div class="form-group align-left">
+              <input type="checkbox" name="terms" id="terms">
+              <div class="input-box">
+                <label for="terms">Terms and Condition</label>
+              </div>
+            </div>
+            <div class="buttons">
+              <button id="Submit" title="Submit">Submit</button>
+              <button id="cancel" title="Cancel">Cancel</button>
+            </div>
+          </form>
+          <!--form section end-->
+          <!--display section start-->
+          <div class="display">
+            <ul class="display-box">
+              <li>Name</li>
+              <li>Last Name</li>
+              <li>Gender</li>
+              <li>Address</li>
+              <li>Edit</li>
+              <li>Delete</li>
+            </ul>
+          </div>
         </div>
-        
-        
-        <script src="js/vendors/jquery-1.8.3.min.js"></script>
-        <!-- <script src="js/script.js"></script>-->
-        <script src="assets/js/script.js"></script>
-    </body>
+      </div>
+      <!--display section end-->
+    </main>
+    <!--main section end-->
+
+    <!--footer section start-->
+    <footer>
+
+    </footer>
+    <!--footer section end-->
+
+  </div>
+  <!--container end-->
+
+<script src="assets/js/script.js"></script> 
+</body>
+
 </html>
